--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"> img/favi con.png">
-
-
-
-
-    <![endif]
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/img/favicon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon.png">
